--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="callout">
+      웹 페이지로도 보실 수 있습니다.
+      <a
+        href="https://resume.fecapark.com/"
+        rel="noopener noreferrer"
+        target="_blank"
+        >링크</a
+      >
+    </div>
     <div class="container">
       <!-- Header -->
       <header class="header">
@@ -20,11 +29,13 @@
         <h1>박상혁</h1>
         <p class="role">Frontend Developer</p>
         <p class="intro">
-          필요하다면 새로운 걸 배우고 도입하는 것을 꺼리지 않습니다. 무언가
-          만드는 것을 좋아하고 특히 색다른 인터페이스와 인터랙션, 그리고
-          애니메이션을 구현하는 것을 좋아합니다. 이로써 사용자의 자연스러운 행동
-          유도와 편한 사용을 끌어내려 합니다. DX를 위해 내부 로직 뿐만 아니라
-          사용처에서도 쉽게 사용할 수 있도록 공부하고 노력합니다.
+          같은 것을 만들어도 다른 느낌을 주는 것을 목표로 합니다. 사소한
+          디테일에 집착하고, 이것이 모여 완성도와 사용자 경험에 큰 영향을 준다고
+          믿습니다. 유려한 인터랙션과 애니메이션을 구현하는 것을 좋아합니다.
+          어떤 문제를 발견하고, 기술적으로 해결하여, 현실에 주는 영향으로
+          이끌어내는 것을 좋아해서 개발에 입문했습니다. 동료 또한 쉽게 읽을 수
+          있는 코드를 작성하기 위해, 많은 의견을 나누고 더 나은 방식을
+          고민합니다.
         </p>
         <p class="contact">
           <a
@@ -84,8 +95,8 @@
             <span class="item-sub-title">클레임 처리 서비스</span>
             <p class="item-sub-desc">
               진단 내역과 차량 정보 불일치로 인한 클레임 처리 서비스를
-              만들었습니다.<br />0 to 1 부터 참여하여 프론트엔드 파트를
-              핸들링했습니다.
+              만들었습니다.<br />0 to 1 부터 프론트엔드 파트를 핸들링하고 기획에
+              참여했습니다.
             </p>
             <ul>
               <li>
@@ -182,9 +193,10 @@
           <div class="item-stack">
             <span>React</span>
             <span>Typescript</span>
+            <span>Tanstack Router</span>
+            <span>Tanstack Query</span>
             <span>TailwindCSS</span>
             <span>Motion</span>
-            <span>Tanstack Router</span>
           </div>
         </div>
 
@@ -364,6 +376,7 @@
           <div class="item-stack">
             <span>Next.js</span>
             <span>TypeScript</span>
+            <span>Tanstack Query</span>
             <span>TailwindCSS</span>
             <span>Nivo</span>
             <span>Firebase</span>
@@ -500,9 +513,9 @@
           </div>
           <p class="item-desc">
             숭실대학교 개발 동아리 유어슈에서 프론트엔드 파트 리드진으로
-            참여하고 있습니다. 숭실대학교 학생들이 사용하는 여러 서비스들을
-            만들고, 조직내에서 자유로운 개발 문화를 만들고 지식을 공유하여
-            선순환을 만들기 위해 노력하고 있습니다.
+            참여하고 있습니다. 밖으로는 숭실대학교 학생들이 사용하는 여러
+            서비스들을 만들고, 안에서는 자유로운 개발 문화를 만들고 지식을
+            공유하여 선순환을 만들기 위해 노력하고 있습니다.
           </p>
           <ul>
             <li>
@@ -523,6 +536,28 @@
             >
             <div class="item-meta">
               <span>23.09 ~ 25.09</span>
+            </div>
+          </div>
+          <ul>
+            <li>
+              스피커:
+              <a
+                href="https://youtu.be/x9ozmIr2DoE"
+                rel="noopener noreferrer"
+                target="_blank"
+                >24.05.04 웹사이트로 끝까지 벌어보자</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div class="item-block">
+          <div class="item-header">
+            <span class="item-title">대한민국 공군 전산장비정비병</span>
+            <div class="item-meta">
+              <span>21.12 ~ 23.09</span>
+              <span>·</span>
+              <span>병장 만기전역</span>
             </div>
           </div>
         </div>
