--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="callout">
+    <!-- <div class="callout">
       웹 페이지로도 보실 수 있습니다.
       <a
         href="https://resume.fecapark.com/"
@@ -21,7 +21,7 @@
         target="_blank"
         >링크</a
       >
-    </div>
+    </div> -->
     <div class="container">
       <!-- Header -->
       <header class="header">
@@ -128,6 +128,65 @@
       <!-- Projects -->
       <section class="section">
         <h2>Projects.</h2>
+
+        <div class="item-block">
+          <div class="item-header">
+            <div class="item-title-row">
+              <span class="item-title">메이플랜드 옥션</span>
+              <span class="item-links">
+                <a
+                  href="https://mapleland-auction-webui.vercel.app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Website</a
+                >
+              </span>
+            </div>
+            <div class="item-meta">
+              <span>2024.02 ~ 2024.05</span>
+              <span>·</span>
+              <span>서비스</span>
+            </div>
+          </div>
+          <p class="item-desc">
+            넥슨 메이플랜드 게임 내 일부 이용자들의 시세 조작으로 인해 정상적인
+            거래가 어려운 문제를 인식하고, 이를 해소하기 위해 다중 거래소
+            데이터를 자동 수집, 정제하는 시스템을 직접 설계했습니다. 혼자서 2주
+            만에 MVP를 완성하여 커뮤니티에서 화제를 얻었고, 월 PV 120만 이상 및
+            광고 수익화를 달성했습니다.
+          </p>
+          <ul>
+            <li>일별, 시간별 아이템 시세 통계 및 차트 시각화 뷰 제공</li>
+            <li>거래 동향 정보를 제공하는 가격순 및 거래량 트렌딩 뷰 구현</li>
+            <li>
+              디스코드 API 미지원으로 인한 채널 거래소 아이템 거래글 수집 문제:
+              Network 탭 분석으로 디스코드 내부 API를 역설계하여 세션 유지 및
+              게시글 데이터 수집
+            </li>
+            <li>
+              비선형적 아이템 게시글 분류 문제: 구매 유형, 아이템, 가격 등
+              키워드 간 상대적 거리 차이를 이용해 문맥 상의 거래 유형을 분류하는
+              문자열 거리 기반 알고리즘 구현
+            </li>
+            <li>
+              아이템 약어 및 갯수, 금액, 확률 관련 용어 혼재: 자주 사용되는
+              패턴들을 추출, 카테고라이징 후 분류하는 로직 구현
+            </li>
+            <li>
+              의도적 시세 조작 문제: Modified Z-Score 기반 이상치 탐지 알고리즘
+              적용, 이전 시세와의 괴리도 및 거래량 급등락을 고려해 자동
+              필터링으로 정확도 향상
+            </li>
+          </ul>
+          <div class="item-stack">
+            <span>Next.js</span>
+            <span>TypeScript</span>
+            <span>Tanstack Query</span>
+            <span>TailwindCSS</span>
+            <span>Nivo</span>
+            <span>Firebase</span>
+          </div>
+        </div>
 
         <div class="item-block">
           <div class="item-header">
@@ -321,65 +380,6 @@
             <span>Next.js</span>
             <span>TypeScript</span>
             <span>Emotion</span>
-          </div>
-        </div>
-
-        <div class="item-block">
-          <div class="item-header">
-            <div class="item-title-row">
-              <span class="item-title">메이플랜드 옥션</span>
-              <span class="item-links">
-                <a
-                  href="https://mapleland-auction-webui.vercel.app/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Website</a
-                >
-              </span>
-            </div>
-            <div class="item-meta">
-              <span>2024.02 ~ 2024.05</span>
-              <span>·</span>
-              <span>서비스</span>
-            </div>
-          </div>
-          <p class="item-desc">
-            넥슨 메이플랜드 게임 내 일부 이용자들의 시세 조작으로 인해 정상적인
-            거래가 어려운 문제를 인식하고, 이를 해소하기 위해 다중 거래소
-            데이터를 자동 수집, 정제하는 시스템을 직접 설계했습니다. 혼자서 2주
-            만에 MVP를 완성하여 커뮤니티에서 화제를 얻었고, 월 PV 120만 이상 및
-            광고 수익화를 달성했습니다.
-          </p>
-          <ul>
-            <li>일별, 시간별 아이템 시세 통계 및 차트 시각화 뷰 제공</li>
-            <li>거래 동향 정보를 제공하는 가격순 및 거래량 트렌딩 뷰 구현</li>
-            <li>
-              디스코드 API 미지원으로 인한 채널 거래소 아이템 거래글 수집 문제:
-              Network 탭 분석으로 디스코드 내부 API를 역설계하여 세션 유지 및
-              게시글 데이터 수집
-            </li>
-            <li>
-              비선형적 아이템 게시글 분류 문제: 구매 유형, 아이템, 가격 등
-              키워드 간 상대적 거리 차이를 이용해 문맥 상의 거래 유형을 분류하는
-              문자열 거리 기반 알고리즘 구현
-            </li>
-            <li>
-              아이템 약어 및 갯수, 금액, 확률 관련 용어 혼재: 자주 사용되는
-              패턴들을 추출, 카테고라이징 후 분류하는 로직 구현
-            </li>
-            <li>
-              의도적 시세 조작 문제: Modified Z-Score 기반 이상치 탐지 알고리즘
-              적용, 이전 시세와의 괴리도 및 거래량 급등락을 고려해 자동
-              필터링으로 정확도 향상
-            </li>
-          </ul>
-          <div class="item-stack">
-            <span>Next.js</span>
-            <span>TypeScript</span>
-            <span>Tanstack Query</span>
-            <span>TailwindCSS</span>
-            <span>Nivo</span>
-            <span>Firebase</span>
           </div>
         </div>
       </section>
